kubernetes/arr/qbittorrent/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
